--- a/dibs.html
+++ b/dibs.html
@@ -2,11 +2,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>DiBS Web API</title>
-    <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function () {
 			var date = new Date().toISOString().slice(0,10);
-            $.getJSON("http://chapelhill.evanced.info/dibsAPI/reservations/" + date + "/48",
+            $.getJSON("https://chapelhill.evanced.info/dibsAPI/reservations/" + date + "/48",
             function processData(jsonData) {
 				
 				var items = []
