--- a/dibs.html
+++ b/dibs.html
@@ -3,24 +3,29 @@
     <meta name="viewport" content="width=device-width" />
     <title>DiBS Web API</title>
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
+			var room = 52;
 			var date = new Date().toISOString().slice(0,10);
-			$(".title").append(date);
+			$(".title").append("Room " + room + " Reservations for " + moment(date).format('MMMM Do, Y'));
 			
-            $.getJSON("https://chapelhill.evanced.info/dibsAPI/reservations/" + date + "/48",
+            $.getJSON("https://chapelhill.evanced.info/dibsAPI/reservations/" + date + "/" + room,
             function processData(jsonData) {
 				
 				for(var t = 9; t < 20; t += .5){
 					var items = [];
+					var strikeS = "";
+					var strikeB = "";
+					if(isPast(t)) strikeS = "<s>", strikeB = "</s>";
 					items.push("<tr>");
-					items.push("<td>" + formatTime(timeStr(t)) + "</td>");
-					items.push("<td>" + formatTime(timeStr(t + .5)) + "</td>");
-					items[3] = ("<td>Open</td>");
+					items.push("<td>" + strikeS + formatTime(timeStr(t)) + strikeB + "</td>");
+					items.push("<td>" + strikeS + formatTime(timeStr(t + .5)) + strikeB + "</td>");
+					items[3] = ("<td>" + strikeS + "<a href=http://chapelhill.evanced.info/dibs/?room=" + room + ">Open</a>" + strikeB + "</td>");
 					$.each(jsonData, function (object, objectData) {
 						for(var k = .5; k <= duration(objectData.StartTime, objectData.EndTime); k += .5){
 							if(objectData.StartTime == timeStr(t) || objectData.EndTime == timeStr(t+k)){
-								items[3] = ("<td>Booked</td>");
+								items[3] = ("<td>" + strikeS + "Booked" + strikeB + "</td>");
 							}
 						}
 					});
@@ -63,13 +68,20 @@
 				return output;
 			}
 			
+			function isPast(t){
+				t += .5;
+				var time = new Date();
+				if(time.getHours() > parseInt(timeStr(t).substr(11, 13)) || (time.getHours() == parseInt(timeStr(t).substr(11, 13)) && time.getMinutes() > parseInt(timeStr(t).substr(14, 16)))) return true;
+				else return false;
+			}
+			
 		});
 			
     </script>
 
 </head>
 <body>
-<h2 class="title"> Room 48 Reservations for </h2>
+<h2 class="title"></h2>
     <table class="table">
       <thead>
         <tr>
