--- a/dibs_single_room.html
+++ b/dibs_single_room.html
@@ -4,6 +4,7 @@
     <title>DiBS Web API</title>
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="dibs.css"></link>
     <script type="text/javascript">
         $(document).ready(function () {
 			var room = 48;
@@ -32,6 +33,8 @@
 						}).appendTo("table");
 					}
 				}
+				
+				setColors();
 				
             });
 			
@@ -72,6 +75,21 @@
 				var time = new Date();
 				if(time.getHours() > parseInt(timeStr(t).substr(11, 13)) || (time.getHours() == parseInt(timeStr(t).substr(11, 13)) && time.getMinutes() > parseInt(timeStr(t).substr(14, 16)))) return true;
 				else return false;
+			}
+			
+			function setColors(){
+				var allTableCells = document.getElementsByTagName("td");
+
+				for(var i = 0, max = allTableCells.length; i < max; i++) {
+				var node = allTableCells[i];
+
+				//get the text from the first child node - which should be a text node
+				var currentText = node.childNodes[0].nodeValue; 
+
+				//check for 'one' and assign this table cell's background color accordingly 
+				if (currentText === "Booked")
+				node.style.backgroundColor = "#cccccc";
+				}
 			}
 			
 		});
