--- a/dibs.html
+++ b/dibs.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
 			var date = new Date().toISOString().slice(0,10);
-			$(".title").append("Tap an open spot to book a room on " + moment(date).format('MMMM Do'));
+			$(".title").append("Tap an open spot to book a room on " + moment(date).format('MMMM Do') + ".");
 			
 			var objectDatas = [];
 			
