--- a/dibs_48.html
+++ b/dibs_48.html
@@ -146,8 +146,7 @@
     <table class="table">
       <thead>
         <tr>
-          <th>Start Time</th>
-          <th>End Time</th>
+          <th>Time</th>
 		  <th>Status</th>
         </tr>
       </thead>
