--- a/dibs_50.html
+++ b/dibs_50.html
@@ -10,7 +10,7 @@
 			//Change the room variable as needed. I might make this a user input later.
 			var room = 50;
 			var date = new Date().toISOString().slice(0,10);
-			$(".title").append("Tap an open spot to book this room on " + moment(date).format('MMMM Do'));
+			$(".title").append("Tap an open spot to book this room on " + moment(date).format('MMMM Do') + ".");
 			
             $.getJSON("https://chapelhill.evanced.info/dibsAPI/reservations/" + date + "/" + room,
             function processData(jsonData) {
@@ -20,8 +20,7 @@
 						var items = [];
 						//fills the "Start Time" and "End Time" columns
 						items.push("<tr>");
-						items.push("<td>" + formatTime(timeStr(t)) + "</td>");
-						items.push("<td>" + formatTime(timeStr(t + .5)) + "</td>");
+						items.push("<td>" + formatTime(timeStr(t)) + " -" + formatTime(timeStr(t + .5)) + "</td>");
 						items[3] = ("<td>" + "<a href=http://chapelhill.evanced.info/dibs/?room=" + room + ">Open</a></td>");
 						//Checks whether the room is taken for any blocks of time.
 						$.each(jsonData, function (object, objectData) {
@@ -147,8 +146,7 @@
     <table class="table">
       <thead>
         <tr>
-          <th>Start Time</th>
-          <th>End Time</th>
+          <th>Time</th>
 		  <th>Status</th>
         </tr>
       </thead>
