--- a/dibs_48.html
+++ b/dibs_48.html
@@ -4,13 +4,16 @@
     <title>DiBS Web API</title>
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="dibs.css"></link>
     <script type="text/javascript">
         $(document).ready(function () {
 			//Change the room variable as needed. I might make this a user input later.
 			var room = 48;
 			var date = new Date().toISOString().slice(0,10);
-			$(".title").append("Tap an open spot to book this room on " + moment(date).format('MMMM Do') + ".");
+			$(".title").append("Tap a green spot to book this room today.");
+			$(".col-sm-5").append((room - 47));
 			
             $.getJSON("https://chapelhill.evanced.info/dibsAPI/reservations/" + date + "/" + room,
             function processData(jsonData) {
@@ -45,11 +48,12 @@
 			**/
 			function formatTime(t){
 				t = t.substr(11);
-				if(t.substr(0, 2) > 11){
-					t += " pm"
-				}else{
-					t += " am"
-				}if(t.substr(0, 2) > 12){
+				//if(t.substr(0, 2) > 11){
+				//	t += " pm"
+				//}else{
+				//	t += " am"
+				//}
+				if(t.substr(0, 2) > 12){
 					t = " " + (t.substr(0, 2) - 12) + t.substr(2);
 				}else if(t.substr(0, 2) == 0){
 					t = "12" + t.substr(2);
@@ -93,15 +97,12 @@
 			**/
 			function setColors(){
 				var allTableCells = document.getElementsByTagName("td");
-
 				for(var i = 0, max = allTableCells.length; i < max; i++) {
 					var node = allTableCells[i];
-
 					var currentText = node.childNodes[0].nodeValue; 
-
 					if(currentText === "Booked"){
 						node.style.backgroundColor = "#d6d6d6";
-						node.style.color = "#ffffff";
+						node.style.color = "#666666";
 					}else if(currentText === null){
 						node.style.backgroundColor = "#79bd90";
 					}else{
@@ -118,7 +119,6 @@
 				}
 				
 				var elements = document.getElementsByTagName('a');
-
 				for (var i = 0; i < elements.length; i++) {
 					elements[i].style.color = "ffffff";
 				}
@@ -143,6 +143,8 @@
 </head>
 <body>
 <h2 class="title"></h2>
+	<div class = "col-sm-5"></div>
+	<div class = "col-sm-4">
     <table class="table">
       <thead>
         <tr>
@@ -151,5 +153,6 @@
         </tr>
       </thead>
     </table>
+	</div>
 </body>
 </html>
