--- a/dibs_48.html
+++ b/dibs_48.html
@@ -148,6 +148,7 @@
 	<div class = "room-number"></div>
 	</div>
 	<div class = "col-sm-4">
+	<div class = "table-responsive">
     <table class="table">
       <thead>
         <tr>
@@ -156,6 +157,7 @@
         </tr>
       </thead>
     </table>
+	</div>
 	</div>
 </body>
 </html>
