--- a/dibs_48.html
+++ b/dibs_48.html
@@ -24,7 +24,7 @@
 						//fills the "Start Time" and "End Time" columns
 						items.push("<tr>");
 						items.push("<td>" + formatTime(timeStr(t)) + " -" + formatTime(timeStr(t + .5)) + "</td>");
-						items[3] = ("<td>" + "<a href=http://chapelhill.evanced.info/dibs/?room=" + room + ">Open</a></td>");
+						items[3] = ("<td><a href=http://chapelhill.evanced.info/dibs/?room=" + room + ">Open</a></td>");
 						//Checks whether the room is taken for any blocks of time.
 						$.each(jsonData, function (object, objectData) {
 							for(var k = .5; k <= duration(objectData.StartTime, objectData.EndTime); k += .5){
