--- a/dibs_48_test.html
+++ b/dibs_48_test.html
@@ -109,10 +109,12 @@
 					}else if(currentText === null){
 						node.style.backgroundColor = "#79bd90";
 						timeDesc.style.backgroundColor = "#79bd90";
-					}else{
-						node.style.backgroundColor = "#ffffff";
-						node.style.color = "#007ebd";
+						timeDesc.style.color = "#ffffff";
 					}
+					//else{
+					//	node.style.backgroundColor = "#ffffff";
+					//	node.style.color = "#007ebd";
+					//}
 				}
 				
 				var allHeaders = document.getElementsByTagName("th");
