--- a/dibs.html
+++ b/dibs.html
@@ -10,10 +10,11 @@
 			var date = new Date().toISOString().slice(0,10);
 			
 			var objectDatas = [];
+			var rooms = [48, 49, 50, 51, 52, 53, 63];
 			
 			//Loops the getData function over each room
-			for(var room = 48; room <= 53; room++){
-				getData(room);
+			for(var room = 0; room < rooms.length; room++){
+				getData(rooms[room]);
 			}
 			
 			/**
@@ -29,9 +30,9 @@
 					$.each(jsonData, function (object, objectData){
 						roomData.push(new Array(objectData.StartTime, objectData.EndTime));
 					});
-					objectDatas[room - 48] = roomData;
+					objectDatas[roomNumber(room) - 1] = roomData;
 					
-					if(objectDatas.length == 6) mainLoop();
+					if(objectDatas.length == rooms.length) mainLoop();
 				});
 			}
 			
@@ -41,7 +42,7 @@
 			*Don't say I didn't warn you.
 			**/
 			function mainLoop(){
-			
+				console.log("Please tell me this is actually somewhat working.");
 				for(var t = openHours()[0]; t < openHours()[1]; t += .5){
 					if(!isPast(t)){
 						var items = [];
@@ -49,8 +50,8 @@
 						items.push("<tr>");
 						items.push("<td>" + formatTime(timeStr(t)) + " -" + formatTime(timeStr(t + .5)) + "</td>");
 						//checks to see whether a room is booked for any time period;
-						for(var n = 0; n <= 5; n++){
-							items[3 + n] = ("<td>" + "<a href=http://chapelhill.evanced.info/dibs/?room=" + (48 + n) + ">Open</a></td>");
+						for(var n = 0; n < rooms.length; n++){
+							items[3 + n] = ("<td>" + "<a href=http://chapelhill.evanced.info/dibs/?room=" + (rooms[n]) + ">Open</a></td>");
 							for(var i = 0; i < objectDatas[n].length; i++){
 								for(var k = .5; k <= duration(objectDatas[n][i][0], objectDatas[n][i][1]); k += .5){
 									if(objectDatas[n][i][0] == timeStr(t) || objectDatas[n][i][1] == timeStr(t+k)){
@@ -59,6 +60,7 @@
 								}
 							}
 						}
+						console.log("Happening");
 						//appends data to the table
 						$("<tbody/>", {
 						html: items.join("")
@@ -170,6 +172,16 @@
 				else return [9, 20];
 			}
 			
+			/**
+			*Returns the public room number corresponding to a given room ID.
+			**/
+			function roomNumber(room){
+				for(i = 0; i < rooms.length; i++){
+					if(rooms[i] == room) return i + 1;
+				}
+				return null;
+			}
+			
 		});
 			
     </script>
@@ -188,6 +200,7 @@
 		  <th>Room 4</th>
 		  <th>Room 5</th>
 		  <th>Room 6</th>
+		  <th>Room 7</th>
         </tr>
       </thead>
     </table>
