--- a/dibs_7.html
+++ b/dibs_7.html
@@ -6,12 +6,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="dibs_6.css"></link>
+	<link rel="stylesheet" type="text/css" href="dibs_7.css"></link>
     <script type="text/javascript">
         $(document).ready(function () {
 			//Change the room variable as needed. I might make this a user input later.
 			var room = 63;
 			var date = new Date().toISOString().slice(0,10);
+			$(".title").append("Room reservations for " + moment(date).format('MMMM Do, Y'));
 			$(".room-number").append((7));
 			
             $.getJSON("https://chapelhill.evanced.info/dibsAPI/reservations/" + date + "/" + room,
@@ -149,12 +150,12 @@
 </head>
 <body>
 <br></br><br></br><br></br>
-<h2 class="title"></h2>
 	<div class = "col-sm-5">
 	<div class = "room-number"></div>
 	<div class = "instructions"></div>
 	</div>
 	<div class = "col-sm-4">
+	<h2 class="title"></h2>
 	<div class = "table-responsive">
     <table class="table">
     </table>
