Converted time into integers, comparison now occuring, but not correctly

--- a/stroudls/momentTesting.html
+++ b/stroudls/momentTesting.html
@@ -7,7 +7,7 @@
     <title>DiBS Web API</title>
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-	<script src="moment.js"></script>
+	<!-- <script src="moment.js"></script> -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dibs_1.css"></link> -->
@@ -38,13 +38,8 @@ var day = moment().day();
 var rawBookedTimes = [];
 var cookedBookTimes = [];
 var openHours = {};
-var reservedHours = [
-	reservedTime = {
-		start: '',
-		end: ''
-	}
-];
-
+var reservedHours = [];
+var intTime = [];
 
 // Populating the html with info about date & room #
 $(".title").append("Available room reservations for: " + titleDate);
@@ -60,41 +55,50 @@ $(document).ready(function checkTimes() {
 		method: "GET"
 
 	}).done(function(response) {
-			// calling open hours function to populate page
-			openHours();
-			// loop for getting the booked times out of the json object
+			// getting the booked times out of the json object
 			for (var i = 0; i < response.length; i++) {
 				rawBookedTimes.push(response[i]);
 			};
 
-			console.log(rawBookedTimes);
-
-			// storing the start and end times of reservations in
-			// an array of objects to make comparison simpler
-			// var reservedHours = [
-			// 	reservedTime = {
-			// 		start: '',
-			// 		end: ''
-			// 	}
-			// ];
-
 			// further isolating the time data. 
-			// it gets stored in reserved hours array
+			// storing data in reserved hours array
 			for (var j = 0; j < rawBookedTimes.length; j++) {
 							
 				var bookedStart = rawBookedTimes[j].StartTime;
 				var bookedEnd = rawBookedTimes[j].EndTime;
 				var splitBookStart = bookedStart.split("T");
 				var splitBookEnd = bookedEnd.split("T");	
-					reservedHours.push({
-						start: splitBookStart[1],
-						end: splitBookEnd[1]
-					});
-				};
+				reservedHours.push({
+					start: splitBookStart[1],
+					end: splitBookEnd[1]
+				});
+			};
+		
+		// converting reserved times into integer values to compare in openHours function
+		for (var i = 0; i < reservedHours.length; i++) {
+			var intTimeStart = parseFloat(reservedHours[i].start.split(':')[0], 10);
+			var intTimeEnd = parseFloat(reservedHours[i].end.split(':')[0], 10);
+			intTime.push({
+				start: intTimeStart, 
+				end: intTimeEnd
+			});
+		};
 		console.log(reservedHours);
+		console.log(intTime);
 
+		// intended to run the comparison here
+		// currently broken, but I think it could work
+		// maybe, I've been wrong about a lot on this one
+		for (var n = 0; n < intTime.length; n++) {
+			var start = intTime[n].start;
+			var end = intTime[n].end;
+			console.log(start);
+			console.log(end);
+			openHours();
+			break;
+		};
 		// Depending on the day, sets the hours the library is open.  
-		// Loops through, creating a boolean value to help with comarison function 
+		// Loops through, creating a boolean value to help with comparison & DOM manipulation  
 		function openHours() {
 			var open = '';
 			var close = '';
@@ -122,7 +126,7 @@ $(document).ready(function checkTimes() {
 				var open = parseFloat(openHours.startTime.split(':')[0], 10);
 				var close = parseFloat(openHours.endTime.split(':')[0], 10);
 
-				while (open <= close) {
+				while (open < close) {
 				var currentSlot;
 				if (Math.floor(open) === open) {
 					currentSlot = "" + open + ":00";
@@ -130,25 +134,26 @@ $(document).ready(function checkTimes() {
 					var timeSliced = ("" + open).split('.')[0]
 					currentSlot = timeSliced + ":30"
 				};
-				if (openHours.slots.time === reservedHours.start) {
+				// these if statements need work,
+				// currently setting all values to either true or false instead of dynamically updating
+				if (open !== start || end) {
 						openHours.slots.push({
 						time: currentSlot,
-						available: false
+						available: true
 					});
-				} else {
+				} else if (open === start || end) {
 					openHours.slots.push({
 						time: currentSlot,
-						available: true
+						available: false
 					});
 				};
 				open += 0.5
 			};
-
 			// loop for adding buttons on the html
 			// One day, this will hide buttons that lie between reserved times
 			// Also, pay no mind to the formatting, that will be fixed once
 			// once the comparison is up and running
-			for (var i = 0; i < openHours.slots.length; i ++) {
+			for (var i = 0; i < openHours.slots.length; i++) {
 				var times = openHours.slots[i].time;
 				var isOpen = openHours.slots[i].available;
 				var button = "<button class=reserve a href=http://chapelhill.evanced.info/dibs/?room=" + roomID + " id=" + times + " value=" + isOpen + ">" + times;
@@ -157,7 +162,7 @@ $(document).ready(function checkTimes() {
 		};
 	});
 });
- </script>
+</script>
 
 </body>
 </html>
