--- a/stroudls/libraryRes.html
+++ b/stroudls/libraryRes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>testing</title>
+	<title>Library Room Reservations</title>
 
 	<meta name="viewport" content="width=device-width" />
     <title>DiBS Web API</title>
@@ -13,14 +13,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 </head>
 <body>
-    <div class = "col-sm-4">
-        <h2 class="title"></h2>
-            <h3 id="room"></h3>	
-                <div class=table-responsive>
-                    <p id=room-times></p>
-                    <table class="table">
-                </table>
-            </div>
+    <h1 id="header"></div>
+        <div class="col-sm-4">
+            <h2 class="title"></h2>
+                <h3 id="room"></h3>	
+                    <div class=table-responsive>
+                        <table class="table">
+                    </table>
+                </div>
+            </div>    
         </div>
     </body>
 </html>
