Having to restructure some of the logic to allow for multiple simultaneous room checks.

--- a/dibs.html
+++ b/dibs.html
@@ -60,6 +60,7 @@
 								}
 							}
 						}
+						console.log(items);
 						//appends data to the table
 						$("<tbody/>", {
 						html: items.join("")
