--- a/new-dibs/master-dibs/index.html
+++ b/new-dibs/master-dibs/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <br></br><br></br><br></br>
-        <div class = "col-sm-4">
+        <div class = "col-md-12">
             <h2 class="title"></h2>
                 <div class = "table-responsive">
                 <table class="table">
