fixed incorrect hours bug for weekend times, working on master table

--- a/new-dibs/master-dibs/index.html
+++ b/new-dibs/master-dibs/index.html
@@ -20,14 +20,13 @@
                 <table class="table">
                     <tr>
                     <th>Times</th>
-                    <th>Room 1</th>
+                    <th id="48">Room 1</th>
                     <th>Room 2</th>
                     <th>Room 3</th>
                     <th>Room 4</th>
                     <th>Room 5</th>
                     <th>Room 6</th>
-                    <th>Room 7</th>
-                    </tr>
+                    <th id="63">Room 7</th>
                 </table>
             </div>
         </div>  
