--- a/new-dibs/master-dibs/index.html
+++ b/new-dibs/master-dibs/index.html
@@ -8,27 +8,90 @@
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="logic.js"></script>
+    <!-- <script src="logic/room1.js"></script>
+    <script src="logic/room2.js"></script> -->
+    <!-- <script src="logic/room3.js"></script> -->
+    <script src="logic/real-logic.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 </head>
 <body>
     <br></br><br></br><br></br>
-        <div class = "col-md-12">
-            <h2 class="title"></h2>
+    <div id="master-div">
+        <div class = "col-sm-1">
                 <div class = "table-responsive">
-                <table class="table">
-                    <tr>
-                    <th>Times</th>
-                    <th id="48">Room 1</th>
-                    <th>Room 2</th>
-                    <th>Room 3</th>
-                    <th>Room 4</th>
-                    <th>Room 5</th>
-                    <th>Room 6</th>
-                    <th id="63">Room 7</th>
+                <table id="times" class="table">
+                    <thead>
+                        <tr>
+                            <th>Times</th>
+                        </tr>
+                    </thead>
                 </table>
             </div>
-        </div>  
+        </div>
+            <div class = "col-sm-1">
+                <table id="48" class="table1">
+                    <thead>
+                        <tr>
+                            <th class"header">Room 1</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        <div class = "col-sm-1">
+            <table id="49" class="table2">
+                <thead>
+                    <tr>
+                        <th class"header">Room 2</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+            <div class = "col-sm-1">
+                <table id="50" class="table3">
+                    <thead>
+                        <tr>
+                            <th class"header">Room 3</th>
+                        </tr>   
+                    </thead>
+                </table>
+            </div>
+        <div class = "col-sm-1">
+            <table id="51" class="table4">
+                <thead>
+                    <tr>
+                        <th class"header">Room 4</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+        <div class = "col-sm-1">
+            <table id="52" class="table5">
+                <thead>
+                    <tr>
+                        <th class"header">Room 5</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+        <div class = "col-sm-1">
+            <table id="53" class="table6">
+                <thead>
+                    <tr>
+                        <th class"header">Room 6</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+            <div class = "col-sm-1">
+                <table id="63" class="table7">
+                    <thead>
+                        <tr>
+                            <th class"header">Room 7</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
     </body>
 </html>
