--- a/new-dibs/master-dibs/index.html
+++ b/new-dibs/master-dibs/index.html
@@ -8,17 +8,15 @@
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <script src="logic/room1.js"></script>
-    <script src="logic/room2.js"></script> -->
-    <!-- <script src="logic/room3.js"></script> -->
     <script src="logic/real-logic.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link> 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
     <br></br><br></br><br></br>
     <div id="master-div">
-        <div class = "col-sm-1">
+        <div class = "col-sm-2">
                 <div class = "table-responsive">
                 <table id="times" class="table">
                     <thead>
